--- a/index.html
+++ b/index.html
@@ -7,7 +7,7 @@
 <center>
 
 <h1 style="text-align: center;"><span style="background-color: #ffffff;">Welcome to Trainiing center</span></h1>
-<a href="C:\Users\mayan\OneDrive\Desktop\Pooja.html">Pooja</a><br>
+<a href="Pooja.html">Pooja</a><br>
 <a href="C:\Users\mayan\OneDrive\Desktop\Vinay.html">Vinay</a><br>
 <a href="C:\Users\mayan\OneDrive\Desktop\Travis.html">Travis</a><br>
 
