--- a/Pooja.html
+++ b/Pooja.html
@@ -9,7 +9,7 @@
 <p style="text-align: center;"><span style="background-color: #99ccff;">Vinay</span> is from Hyderabad</p>
 <p style="text-align: center;">Pooja is a senior person&nbsp;</p>
 
-<a href="C:\Users\mayan\OneDrive\Desktop\main.html">Back</a>
+<a href="main.html">Back</a>
 <center>
 
 </body>
