--- a/Vinay.html
+++ b/Vinay.html
@@ -24,7 +24,7 @@
 
   <input type="submit"><br><br>
 
-<a href="C:\Users\mayan\OneDrive\Desktop\main.html">Back</a><br>
+<a href="index.html">Back</a><br>
 <center>
 
 
