--- a/index.html
+++ b/index.html
@@ -9,7 +9,7 @@
 <h1 style="text-align: center;"><span style="background-color: #ffffff;">Welcome to Trainiing center</span></h1>
 <a href="Pooja.html">Pooja</a><br>
 <a href="Vinay.html">Vinay</a><br>
-<a href="C:\Users\mayan\OneDrive\Desktop\Travis.html">Travis</a><br>
+<a href="Travis.html">Travis</a><br>
 
 
 <form action="/action_page.php">
