--- a/Travis.html
+++ b/Travis.html
@@ -9,7 +9,7 @@
 <p style="text-align: center;"><span style="background-color: #99ccff;">Online training time details displayed</span></p>
 
 
-<a href="C:\Users\mayan\OneDrive\Desktop\index.html">Back</a>
+<a href="index.html">Back</a>
 
 </center>
 
