--- a/index.html
+++ b/index.html
@@ -6,6 +6,8 @@
 <body>
 <center>
 
+<body style="background-color:Tomato;">
+
 <h1 style="text-align: center;"><span style="background-color: #ffffff;">Welcome to Trainiing center</span></h1>
 <a href="Pooja.html">Pooja</a><br>
 <a href="Vinay.html">Vinay</a><br>
@@ -45,6 +47,7 @@
 </form>
 
 </center>
-
+  
+</body>
 </body>
 </html>
