--- a/Submit.html
+++ b/Submit.html
@@ -16,7 +16,7 @@
 <p>Role:</p>
 <p>&nbsp;</p>
 
-<a href="C:\Users\mayan\OneDrive\Desktop\index.html">Back</a><br>
+<a href="index.html">Back</a><br>
 
 </center>
 
