--- a/index.html
+++ b/index.html
@@ -12,6 +12,7 @@
 <a href="Pooja.html">Pooja</a><br>
 <a href="Vinay.html">Vinay</a><br>
 <a href="Travis.html">Travis</a><br>
+<a href="Submit.html">Submit</a><br>
 
 
 <form action="/action_page.php">
