--- a/index.html
+++ b/index.html
@@ -42,9 +42,9 @@
 <label for="Profession">Test Analyst</label><br>
 <input type="checkbox"><br><br>
 
-<form action="/action_page.php">
-<input type="submit" value="Submit">
-</form>
+<a href="Submit.html">
+<button>Submit</button>
+</a>
 
 </center>
   
