--- a/Submit.html
+++ b/Submit.html
@@ -6,15 +6,17 @@
 <body>
 <center>
 
+<body style="background-color:lightgreen;">
+
 <p style="text-align: center;"><span style="color: #ffffff; background-color: #808000;"><strong>Thank you for details!</strong></span></p>
 <p style="text-align: center;">Your response has been submitted successfully submitted.</p>
 <p style="text-align: center;"><strong>Your Details:</strong></p>
-<p>First name:</p>
-<p>Last name:</p>
-<p>Gender:</p>
-<p>Mobile no:</p>
-<p>Role:</p>
-<p>&nbsp;</p>
+<p style="text-align: left;">First name:&nbsp;</p>
+<p style="text-align: left;">Last name:&nbsp;</p>
+<p style="text-align: left;">Gender:&nbsp;</p>
+<p style="text-align: left;">Mobile no:&nbsp;</p>
+<p style="text-align: left;">Role:&nbsp;</p>
+<p style="text-align: left;">&nbsp;</p>
 
 <a href="index.html">Back</a><br>
 
