--- a/Submit.html
+++ b/Submit.html
@@ -18,7 +18,7 @@
 <p style="text-align: left;">Role:&nbsp;</p>
 <p style="text-align: left;">&nbsp;</p>
 
-<a href="index.html">Back</a><br>
+<a href="index.html">Home Page</a><br>
 
 </center>
 
