--- a/index.html
+++ b/index.html
@@ -45,7 +45,7 @@
 <a href="Submit.html">
 <button>Submit</button>
 </a>
-<p style="text-align: center;">For training registeration click <a href="‪here.html">here</a><br></p>
+<h2 style="text-align: center;">For training registeration click <a href="‪here.html">here</a><br></h2>
 
 </center>
   
