--- a/here.html
+++ b/here.html
@@ -5,6 +5,8 @@
 </head>
 <body>
 <center>
+<p style="text-align: center;"><span style="background-color: #99ccff;">Vinay</span> is from Hyderabad</p>
+<p style="text-align: center;">Pooja is a senior person&nbsp;</p>
 
   <a href="index.html">Back</a>
 <center>
