--- a/index.html
+++ b/index.html
@@ -8,7 +8,7 @@
 
 <body style="background-color:Tomato;">
 
-<h1 style="text-align: center;"><span style="background-color: #ffffff;">Welcome to Trainiing center</span></h1>
+<h1 style="text-align: center;"><span style="background-color: #ffffff;">Welcome to Training center</span></h1>
 <a href="Pooja.html">Pooja</a><br>
 <a href="Vinay.html">Vinay</a><br>
 <a href="Travis.html">Travis</a><br>
