--- a/index.html
+++ b/index.html
@@ -45,8 +45,7 @@
 <a href="Submit.html">
 <button>Submit</button>
 </a>
-<h2 style="text-align: center;">For training registeration click <a href="‪here.html">here</a><br></h2>
-
+<h2 style="text-align: center;"><span style="background-color: #ffffff;">For training registration</span></h2><a href="‪here.html">here</a><br>
 </center>
   
 </body>
