--- a/Travis.html
+++ b/Travis.html
@@ -1,15 +1,29 @@
 <!DOCTYPE html>
 <html>
 <head>
-<title>DM Logics</title>
+<title>Registration Form</title>
 </head>
 <body>
 <center>
 
-<p style="text-align: center;"><span style="background-color: #99ccff;">Online training time details displayed</span></p>
+<p style="text-align: center;"><strong><span style="background-color: #ff00ff;">Registration Form</span></strong></p>
 
+<form action="/action_page.php">
+  <label for="fname">First name:</label><br>
+  <input type="text" id="fname" name="fname" value=""><br>
+  <label for="lname">Last name:</label><br>
+  <input type="text" id="lname" name="lname" value=""><br><br>
+  <label for="fname">Enter email::</label><br>
+  <input type="text" id="email" name="email" value=""><br>
+  <label for="lname">Contact no:</label><br>
+  <input type="text" id="cno" name="cno" value=""><br><br>
+  <label for="gender">Select Gender:</label><br>
+  <select id="gender" name="gender">
+   <option value="Male">Male</option>
+   <option value="Male">FeMale</option>
+  </select>
+<br>
 
-<a href="index.html">Back</a>
 
 </center>
 
