--- a/Travis.html
+++ b/Travis.html
@@ -24,7 +24,7 @@
   </select>
 <br>
 </form>
-<a href="C:\Users\mayan\OneDrive\Desktop\index.html">Back</a>
+<a href="index.html">Back</a>
 
 </center>
 
