--- a/index.html
+++ b/index.html
@@ -46,7 +46,7 @@
 <button>Submit</button>
 </a>
 <h2 style="text-align: center;">For training registeration click <a href="‪here.html">here</a><br></h2>
-</center>
+<center>
   
 </body>
 </body>
