--- a/Submit.html
+++ b/Submit.html
@@ -11,11 +11,11 @@
 <p style="text-align: center;"><span style="color: #ffffff; background-color: #808000;"><strong>Thank you for details!</strong></span></p>
 <p style="text-align: center;">Your response has been submitted successfully submitted.</p>
 <p style="text-align: center;"><strong>Your Details:</strong></p>
-<p style="text-align: left;">First name:&nbsp;</p>
-<p style="text-align: left;">Last name:&nbsp;</p>
-<p style="text-align: left;">Gender:&nbsp;</p>
-<p style="text-align: left;">Mobile no:&nbsp;</p>
-<p style="text-align: left;">Role:&nbsp;</p>
+<p style="text-align: left;">First name: Mayank&nbsp;</p>
+<p style="text-align: left;">Last name: Tiwari&nbsp;</p>
+<p style="text-align: left;">Gender: Male&nbsp;</p>
+<p style="text-align: left;">Mobile no: 7709056138&nbsp;</p>
+<p style="text-align: left;">Role: Test Analyst&nbsp;</p>
 <p style="text-align: left;">&nbsp;</p>
 
 <a href="index.html">Home Page</a><br>
