--- a/index.html
+++ b/index.html
@@ -45,7 +45,8 @@
 <a href="Submit.html">
 <button>Submit</button>
 </a>
-<h2 style="text-align: center;">For training registeration click <a href="‪here.html">here</a><br></h2>
+<h2 style="text-align: center;">For training registeration click</h2>
+<a href="‪here.html">here</a><br>
 <center>
   
 </body>
