--- a/Here.html
+++ b/Here.html
@@ -24,9 +24,9 @@
   </select>
 <br>
 </form>
-<a href="C:\Users\mayan\OneDrive\Desktop\index.html">Back</a>
+<a href="index.html">Back</a>
 
-</center>
+<center>
 
 </body>
 </html>
