--- a/index.html
+++ b/index.html
@@ -45,6 +45,41 @@
 <a href="Submit.html">
 <button>Submit</button>
 </a>
+
+  <p style="text-align: center;"><span style="background-color: #339966;">Daily Training times:</span></p>
+<table style="border-collapse: collapse; width: 94.6183%; height: 86px;" border="1">
+<tbody>
+<tr style="height: 19px;">
+<td style="width: 15.8164%; height: 19px; text-align: center;"><span style="background-color: #00ccff; color: #ffffff;"><strong>S.no</strong></span></td>
+<td style="width: 27.1322%; height: 19px; text-align: center;"><span style="background-color: #ffffff;"><strong>Training Name</strong></span></td>
+<td style="width: 28.659%; height: 19px; text-align: center;"><span style="background-color: #ffffff;"><strong>Traing Mode</strong></span></td>
+<td style="width: 7.74335%; height: 19px; text-align: center;"><span style="background-color: #ffffff;"><strong>(From)Time</strong></span></td>
+<td style="width: 15.4878%; text-align: center;"><span style="background-color: #ffffff;"><strong>Time(To)</strong></span></td>
+</tr>
+<tr style="height: 18px;">
+<td style="width: 15.8164%; height: 18px; text-align: center;"><span style="background-color: #00ccff; color: #ffffff;">1</span></td>
+<td style="width: 27.1322%; height: 18px; text-align: center;"><span style="background-color: #ffffff;">Python+Java</span></td>
+<td style="width: 28.659%; height: 18px; text-align: center;"><span style="background-color: #ffffff;">Offline</span></td>
+<td style="width: 7.74335%; height: 18px; text-align: center;"><span style="background-color: #ffffff;">09:45am</span></td>
+<td style="width: 15.4878%; text-align: center;"><span style="background-color: #ffffff;">12:30pm</span></td>
+</tr>
+<tr style="height: 18px;">
+<td style="width: 15.8164%; height: 18px; text-align: center;"><span style="background-color: #00ccff; color: #ffffff;">2</span></td>
+<td style="width: 27.1322%; height: 18px; text-align: center;"><span style="background-color: #ffffff;">Springboot+Java</span></td>
+<td style="width: 28.659%; height: 18px; text-align: center;"><span style="background-color: #ffffff;">Offline</span></td>
+<td style="width: 7.74335%; height: 18px; text-align: center;"><span style="background-color: #ffffff;">3pm</span></td>
+<td style="width: 15.4878%; text-align: center;"><span style="background-color: #ffffff;">5pm</span></td>
+</tr>
+<tr style="height: 18px;">
+<td style="width: 15.8164%; height: 18px; text-align: center;"><span style="background-color: #00ccff; color: #ffffff;">3</span></td>
+<td style="width: 27.1322%; height: 18px; text-align: center;"><span style="background-color: #ffffff;">Software Testing</span></td>
+<td style="width: 28.659%; height: 18px; text-align: center;"><span style="background-color: #ffffff;">Offline</span></td>
+<td style="width: 7.74335%; height: 18px; text-align: center;"><span style="background-color: #ffffff;">1pm</span></td>
+<td style="width: 15.4878%; text-align: center;"><span style="background-color: #ffffff;">3pm</span></td>
+</tr>
+</tbody>
+</table>
+
 <center>
   
 </body>
